--- a/package.json
+++ b/package.json
@@ -20,10 +20,11 @@
         "react-dom": "^17.0.2",
         "react-hook-form": "^7.20.2",
         "react-scripts": "4.0.3",
+        "styled-components": "^5.3.3",
         "web-vitals": "^1.1.2"
     },
     "devDependencies": {
-        "concurrently": "^6.4.0"
+        "concurrently": "^6.5.1"
     },
     "eslintConfig": {
         "extends": [
